idealist.org (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;jobrelated",
  "char_count": 7610,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.04,
  "homepage_snapshot_redirected_domain": "idealist.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060330035029id_/http://www.idealist.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060330035029id_/http%3A//idealist.org",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "idealist.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615132933id_/http%3A//www.idealist.org/about/privacy.html",
  "policy_title": "Idealist.org - Privacy Statement",
  "policy_url": "idealist.org/about/privacy.html",
  "sha1": "e1fe3860b6215a4d8384f064e7efd5438d8e4d17",
  "simhash": 12264766831765446896,
  "simhash_updated": true,
  "site_hostname": "idealist.org",
  "site_url": "http://idealist.org",
  "smog": 14.98,
  "strict_updated": true,
  "timestamp": "20060615132933",
  "word_count": 1214,
  "year": 2006
}

--- a/i/id/ide/idealist.org.html
+++ b/i/id/ide/idealist.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the idealist.org privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212151019id_/http%3A//www.idealist.org/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the idealist.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615132933id_/http%3A//www.idealist.org/about/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Idealist.org - Privacy Statement</title>
@@ -42,29 +42,29 @@ window.location.href=URL;
 <table width="650" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td>	<h1 align="center" class="green"><b>PRIVACY STATEMENT </b></h1>
-<p>Thank you for visiting our web site and reviewing our Privacy Statement. This web site, Idealist.org (“ <b>Site </b>”), is operated on behalf of Action Without Borders-Idealist.org (“<b>Idealist</b>,” “<b>we</b>,” “<b>us</b>” and “<b>our</b>”). Your privacy is important to us. It is our policy to protect your Personal Information (as defined below) and to use it in accordance with this Privacy Statement. This Privacy Statement only covers privacy practices involving information we collect online. Please note that your use of the Site and services is subject to our Terms and Conditions of Service which you may access from our Home Page or other Site pages by clicking on Terms and Conditions. </p>
+<p>Thank you for visiting our website and reviewing our Privacy Statement. This website, Idealist.org ("<b>Site</b>"), is operated on behalf of Action Without Borders/Idealist.org ("<b>Idealist</b>," "<b>we</b>," "<b>us</b>," and "<b>our</b>"). Your privacy is important to us. It is our policy to protect your Personal Information (as defined below) and to use it in accordance with this Privacy Statement. This Privacy Statement only covers privacy practices involving information we collect online. Please note that your use of the Site and services is subject to our Terms and Conditions of Service which you may access from our homepage or other Site pages by clicking on Terms and Conditions. </p>
 <p align="left" class="blue">
       <b>1.&nbsp; INFORMATION WE COLLECT FROM YOU </b>
-  </p><p>Like many other web sites, we automatically collect information about your Internet connection, such as : </p>
+  </p><p>Like many other websites, we automatically collect information about your internet connection, such as: </p>
 <ul>
-  <li> The IP addressof the server you used to access the Internet; </li>
-  <li> The name of the web site from which you linked directly to our Site; </li>
+  <li> The IP address of the server you used to access the internet; </li>
+  <li> The name of the website from which you linked directly to our Site; </li>
   <li> The date and time you access our Site; and </li>
   <li> The pages you visit. </li>
 </ul>
-<p>This information (“ <b>Non-Personal Information </b>”) does NOT identify you personally. We use this Non-Personal Information to monitor the effectiveness of the Site, identify areas of interest and consider potential improvements to the Site. </p>
-<p>If you choose to use certain features and functions of the Site, we ask you to provide certain personally identifiable information (“ <b>Personal Information </b>”) without which these features cannot work. . By providing such information, you consent to our collection and use of it, as described in this Privacy Statement. We do not collect any Personal Information about you when you visit the Site unless you give us that information. <b></b></p>
-<p>The Personal Information you provide includes information provided during any registration process, including contact information, such as your name, organization name, address and email address, and information about your interests and preferences. We also collect any Personal Information you voluntarily submit when you participate in discussion groups or other forums. Please note that your Personal Information may be available to the general public if you submit your information to be included in one of our databases or if you post information on the Site. </p>
-<p align="left" class="blue"><b>2.&nbsp; USE OF YOUR PERSONAL INFORMATION </b></p><p>We use Personal Information obtained from you to provide services that you request; respond to your questions or inquiries; identify areas of user interest; consider potential improvements to our Site; and provide a forum to coordinate volunteers and non-profit organizations. </p>
+<p>This information ("<b>Non-Personal Information</b>") does NOT identify you personally. We use this Non-Personal Information to monitor the effectiveness of the Site, identify areas of interest, and consider potential improvements to the Site. </p>
+<p>If you choose to use certain features and functions of the Site, we ask you to provide certain personally identifiable information ("<b>Personal Information</b>") without which these features cannot work. By providing such information, you consent to our collection and use of it, as described in this Privacy Statement. We do not collect any Personal Information about you when you visit the Site unless you give us that information. <b></b></p>
+<p>The Personal Information you provide includes information provided during any registration process, including contact information, such as your name, organization name, address, and email address, and information about your interests and preferences. We also collect any Personal Information you voluntarily submit when you participate in discussion groups or other forums. Please note that your Personal Information may be available to the general public if you submit your information to be included in one of our databases or if you post information on the Site. </p>
+<p align="left" class="blue"><b>2.&nbsp; USE OF YOUR PERSONAL INFORMATION </b></p><p>We use Personal Information obtained from you to provide services that you request; respond to your questions or inquiries; identify areas of user interest; consider potential improvements to our Site; and provide a forum to coordinate volunteers and nonprofit organizations. </p>
 <p>Specific ways we use information include: </p>
 <ul>
   <li> If you request, we match your preferences contained within your Personal Information with organizations and listings that we believe may fit your needs. We use your Personal Information to email you about these prospects. </li>
-  <li> You can contact us directly with questions or comments regarding the services or to request additional information by following the links on the “Contact Us” section of our Site. These links require you to give certain Personal Information so that we may respond to your inquiry. </li>
+  <li> You can contact us directly with questions or comments regarding the services or to request additional information by following the links on the "Contact Us" section of our Site. These links require you to give certain Personal Information so that we may respond to your inquiry. </li>
   <li> For distribution purposes, you also provide Personal Information if you request materials from us. We may also use your Personal Information to determine the level of interest in our offerings. </li>
   <li> We may use your Personal Information to get in touch with you regarding the status of your online requests for services or any additional information you requested. We may also use your Personal Information to determine whether you qualify for any services for which you request online. </li>
   <li> We may use your Personal Information to contact you regarding additional services and features or requesting your feedback about your experience with the Site. </li>
-  <li> We provide you with discussion groups for your use. In the event you voluntarily disclose Personal Information using this service, that information, along with any content in your communication or post, can be collected, correlated and used by third parties. This may result in unsolicited messages from or improper and unauthorized use of your Personal Information by third parties. Such activities are beyond our control. </li>
-  <li> If you submit a friend's e-mail address to make use of our “Mail a Friend” feature, we use the e-mail address to mail your message and then delete it from our records. </li>
+  <li> We provide you with discussion groups for your use. In the event you voluntarily disclose Personal Information using this service, that information, along with any content in your communication or post, can be collected, correlated, and used by third parties. This may result in unsolicited messages from or improper and unauthorized use of your Personal Information by third parties. Such activities are beyond our control. </li>
+  <li> If you submit a friend's email address to make use of our "Mail a Friend" feature, we use the email address to mail your message and then delete it from our records. </li>
 </ul>
 <p align="left" class="blue"><b>3&nbsp; LINKS </b></p><p>We provide links on the Site to other sites of interest. We do not endorse the content of these sites or guarantee that they will abide by this Privacy Statement. Your use of such linked sites is subject to the terms and conditions and privacy policies of the providers of those sites. We encourage our users to be aware when they leave our Site and to read the privacy statements of each site that collects Personal Information. </p>
 <p align="left" class="blue"><b>4&nbsp; SHARING YOUR INFORMATION </b></p><p>We do not sell or trade or provide Personal Information to marketing companies or information brokers or any other organization or individual. We will only disclose your Personal Information in the following circumstances without first obtaining your consent: </p>
@@ -76,12 +76,12 @@ window.location.href=URL;
 <p><b class="blue" align="center">5&nbsp; USE OF COOKIES </b></p><p>The use of cookies enables us to enhance your visits to the Site. Cookies are alphanumeric identifiers that are transferred to your computer's hard drive through your web browser. The Help portion of the toolbar on most browsers will tell you how to prevent your browser from accepting new cookies, but this will limit your ability to use some features. Cookies enable us to recognize your browser and provide features that are tailored to your needs. </p>
 <p>We may use information from cookies for purposes of planning and tracking, as well as assessing the technical function of the Site. We may also use cookies to track information about which pages you visit within the Site to help us gauge the effectiveness of the Site or our content. </p>
 <p align="left" class="blue"><b>6&nbsp; CHILDREN AND PARENTS </b></p><p>If you are under fifteen (15), we bly encourage you to use this Site only with the knowledge of a parent or guardian. Any information you submit will be treated in accordance with the policies in this Privacy Statement. </p>
-<p align="left" class="blue"><b>7&nbsp; PROVIDING AND RECEIVING INFORMATION </b></p><p>You can always choose not to provide information or to opt-out of receiving communications from us at any time. We give users the following options: </p>
-<p>Email: <a href="mailto:concerns@idealist.org%20">concerns@idealist.org </a></p>
+<p align="left" class="blue"><b>7&nbsp; PROVIDING AND RECEIVING INFORMATION </b></p><p>You can always choose not to provide information or to opt out of receiving communications from us at any time. We give users the following options: </p>
+<p>Email: <a href="mailto:concerns@idealist.org" class="blue">concerns@idealist.org </a></p>
 <p>Telephone: 212-843-3973 </p>
-<p>Mail: 360 West 31 st Street, suite 1510 , New York , NY 10001 </p>
+<p>Mail: 360 West 31st Street, Suite 1510, New York, NY 10001 </p>
 <p>&nbsp; </p>
-<p align="left" class="blue"><b>8&nbsp; CHANGES TO THIS STATEMENT </b></p><p>We may change this Privacy Statement from time-to-time. If we do make a change, we will post the revised Privacy Statement on this Site. We encourage you to review this Privacy Statement periodically. Questions, comments or complaints about our privacy policies should be submitted to us by one of the methods listed above. </p>
+<p align="left" class="blue"><b>8&nbsp; CHANGES TO THIS STATEMENT </b></p><p>We may change this Privacy Statement from time to time. If we do make a change, we will post the revised Privacy Statement on this Site. We encourage you to review this Privacy Statement periodically. Questions, comments, or complaints about our privacy policies should be submitted to us by one of the methods listed above. </p>
 
 	</td>
   </tr>
