--- a/c/co/cor/cord.edu.html
+++ b/c/co/cor/cord.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cord.edu privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220033913id_/http%3A//www.cord.edu/about/online_privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cord.edu privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615133511id_/http%3A//www.cord.edu/about/online_privacy.html) for the most accurate reproduction.-->
 
 <html><!--This file created 4/25/00 4:24 PM by Claris Home Page version 3.0--><head>
    <title>Concordia College Online Privacy Policy</title>
@@ -236,7 +236,7 @@ function clearInput(el) {
       Bookstore</a></td>
   </tr>
   <tr>
-    <td valign="top"><a href="http://www.cord.edu/dept/info/" class="sublink"><img src="http://www.cord.edu/images/s_box.gif" width="7" height="7" border="0"> 
+    <td valign="top"><a href="http://student.cord.edu/dept/info/" class="sublink"><img src="http://www.cord.edu/images/s_box.gif" width="7" height="7" border="0"> 
       Campus Information</a></td>
   </tr>
    <tr>
@@ -259,7 +259,7 @@ function clearInput(el) {
       Mission</a></td>
   </tr>
   <tr> 
-    <td valign="top"><a href="http://gloria.cord.edu/horde/imp/login.php" class="sublink"><img src="http://www.cord.edu/images/s_box.gif" width="7" height="7" border="0"> 
+    <td valign="top"><a href="https://gloria.cord.edu/uwc" class="sublink"><img src="http://www.cord.edu/images/s_box.gif" width="7" height="7" border="0"> 
       WebMail</a></td>
   </tr>
 </tbody></table>
@@ -368,7 +368,7 @@ function clearInput(el) {
         Publication Date: 
         Friday, 24-Jun-2005 13:06:21 CDT
         <br>
-        Copyright © 1996-2004 All Rights Reserved.<br>
+        Copyright © 1996-2006 All Rights Reserved.<br>
         Concordia College, 901 8th St. S., Moorhead, MN 56562; (218) 299-4000<br>
         Leave <a href="/feedback.html">feedback</a> about this page | Read our <a href="http://www.cord.edu/about/online_privacy.html">online privacy policy</a> </td>
     </tr>
