deliaonline.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "foodandrecipes",
  "char_count": 2484,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.05,
  "homepage_snapshot_redirected_domain": "deliaonline.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401062200id_/http://www.deliaonline.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401062200id_/http%3A//deliaonline.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "deliaonline.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615135157id_/http%3A//www.deliaonline.com/privacy.html",
  "policy_title": "Our privacy policy from Delia Online",
  "policy_url": "deliaonline.com/privacy.html",
  "sha1": "7485a64792b95531ee1ec540891778363961904f",
  "simhash": 13280379455802966666,
  "simhash_updated": false,
  "site_hostname": "deliaonline.com",
  "site_url": "http://deliaonline.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615135157",
  "word_count": 421,
  "year": 2006
}

--- a/d/de/del/deliaonline.com.html
+++ b/d/de/del/deliaonline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the deliaonline.com privacy policy that was archived on 2005-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051223084948id_/http%3A//www.deliaonline.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the deliaonline.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615135157id_/http%3A//www.deliaonline.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Our privacy policy from Delia Online</title><meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -45,17 +45,50 @@
 </div>
 
 <div class="col150 no-print">
+<div class="advert-left-small">
+<!-- VC active -->
+<script type="text/javascript">
+<!--
+// ValueParameters
+ValueHost = "hs0003673";
+ValueLoaded = false;
+ValueID = "pagebuster";
+ValueVersion = "1.2";
+ValueBannerType = "std";
+var ValueWidths_Heights = new Array("120x60");
 
+ValueNoText = 1;
+ValueHCat = "HP";
+ValueBannerSizeOrder =  "listed";
+ValueKWParam = "qx";
+//-->
+</script>
+<script type="text/javascript" src="http://ads.deli.valueclick.net/jsmaster"></script>
+<script type="text/javascript">
+<!--
+if (ValueLoaded) ValueShowAd();
+//-->
+</script>
+<noscript>
+<a href="http://ads.deli.valueclick.net/redirect?host=hs0003673&amp;t=std&amp;b=indexpage&amp;noscript=1&amp;v=0;hcat=HP;msizes=120x60;bso=listed;r=qx" target="_top"><img border="0" width="120" height="60" alt="Click here to visit our sponsor" arc="http://ads.deli.valueclick.net/cycle?host=hs0003673&amp;t=std&amp;b=indexpage&amp;noscript=1;hcat=HP;msizes=$120x60;bso=listed;r=qx"></a>
+</noscript>
+<!-- vc active -->
+</div>
 <div class="panel shop-nav"><div><div><div>
 <p class="title"><a href="/shop/"><strong>The shop</strong></a></p>
 
-<p class="white"><a href="/shop/special-offers"><img src="http://static.deliaonline.com/static/site/graphics/mermaid-cakes.jpg" width="130" height="130" alt=""></a></p>
-<p class="button white"><a href="/shop/special-offers">Special Offers</a></p>
+<p class="white">
+<a href="/shop/special-offers">
+<img src="http://static.deliaonline.com/images/width130/donald-russell-steak-fillet-26832.jpg" width="130" height="130" alt="Donald Russell Steak Fillet">
+</a>
+</p>
+
+<p class="button white">
+<a href="/shop/special-offers">Special Offers</a></p>
 
 <ul class="divider"><li><a href="/shop/wine/">Wine</a></li><li><a href="/shop/food/">Food</a></li><li><a href="/shop/cookware/">Cookware</a></li><li><a href="/shop/gardens/">Gardens</a></li><li><a href="/shop/books/">Books</a></li><li><a href="/shop/gifts/">Gifts</a></li><li><a href="/shop/courses/">Courses</a></li></ul>
 <span class="clear"></span>
 </div></div></div></div>
-
 </div>
 
 <a class="assitive-text" name="content"></a>
@@ -82,18 +115,8 @@
 </a></p>
 </div>
 <div class="feature">
-<p><a href="/premium-content/christmas-with-delia-2004/">
-<img src="http://static.deliaonline.com/images/originals/christmas-with-delia-26659.gif" width="280" height="50" alt="Christmas with Delia">
-</a></p>
-</div>
-<div class="feature">
-<p><a href="/premium-content/cooking-for-one/">
-<img src="http://static.deliaonline.com/images/originals/cooking-for-one-26438.gif" width="280" height="50" alt="Cooking for One">
-</a></p>
-</div>
-<div class="feature">
-<p><a href="/premium-content/autumn-menus/">
-<img src="http://static.deliaonline.com/images/originals/autumn-menu-26437.gif" width="280" height="50" alt="Autumn Menus">
+<p><a href="/premium-content/winter-menus/">
+<img src="http://static.deliaonline.com/images/originals/delia-winter-menus-26658.gif" width="280" height="50" alt="Eight wonderful winter menus">
 </a></p>
 </div>
 <div class="feature">
@@ -107,8 +130,18 @@
 </a></p>
 </div>
 <div class="feature">
-<p><a href="/premium-content/winter-menus/">
-<img src="http://static.deliaonline.com/images/originals/delia-winter-menus-26658.gif" width="280" height="50" alt="Eight wonderful winter menus">
+<p><a href="/premium-content/a-year-in-my-kitchen/">
+<img src="http://static.deliaonline.com/images/originals/a-year-in-my-kitchen-26890.gif" width="280" height="50" alt="A Year in My Kitchen">
+</a></p>
+</div>
+<div class="feature">
+<p><a href="/premium-content/summer-menus/">
+<img src="http://static.deliaonline.com/images/originals/summer-menus-26969.gif" width="280" height="50" alt="Summer Menus">
+</a></p>
+</div>
+<div class="feature">
+<p><a href="/premium-content/cooking-for-one/">
+<img src="http://static.deliaonline.com/images/originals/cooking-for-one-26438.gif" width="280" height="50" alt="Cooking for One">
 </a></p>
 </div>
 <div class="panel membership"><div><div><div>
@@ -135,28 +168,27 @@ Discover the benefits of membership.<br>
 </span>
 </p>
 <input type="hidden" name="actionClass" value="com.othermedia.deliaonline.actions.AuthenticationActions"><input type="hidden" name="formName" value="siteLogin">
-<input type="hidden" name="actionToken" value="a2SYqg2VeMf41">
+<input type="hidden" name="actionToken" value="afAcxYdNkED41">
 <input id="submit-temp" type="hidden" name="null" value="null">
 <input type="hidden" name="referringResource" value="/privacy.html">
 </fieldset>
 </form>
 <p></p>
 <p><a href="#" onclick="javascript:showResetPasswordForm();">Forgotten your password?</a></p>
-<p id="ResetPassword">Enter you email address and click submit to receive a new password.</p>
-<form id="securityResetPassword" action="" method="post" enctype="multipart/form-data">
+<p id="ResetPassword">Enter your email address and click submit to receive a new password.</p>
+<form id="resetPassword" action="" method="post" enctype="multipart/form-data">
 <fieldset>
 		<p>
-  <span class="fieldlabel"><label for="securityResetPassword.email">Email <span class="fieldrequired">*</span> </label><br></span>
-  <span class=""><input class="text" type="text" name="securityResetPassword.email" value="" id="securityResetPassword.email"></span>
+  <span class="fieldlabel"><label for="resetPassword.email">Email <span class="fieldrequired">*</span> </label><br></span>
+  <span class=""><input class="text" type="text" name="resetPassword.email" value="" id="resetPassword.email"></span>
 </p>
 <p>
 <span class="fieldcontrol">
 <input name="actionMethod_doResetPassword" class="submit" onmouseover="this.className='submit-hover'" onmouseout="this.className='submit'" onblur="this.className='submit'" onfocus="this.className='submit-hover'" type="submit" value="Submit">
 </span>
 </p>
-<input type="hidden" name="actionClass" value="com.othermedia.webkit.security.SecurityActions"><input type="hidden" name="formName" value="securityResetPassword">
-<input type="hidden" name="actionToken" value="a2SYqg2VeMf42">
-<input id="submit-temp" type="hidden" name="null" value="null">
+<input type="hidden" name="actionClass" value="com.othermedia.deliaonline.actions.UserActions"><input type="hidden" name="formName" value="resetPassword">
+<input type="hidden" name="actionToken" value="afAcxYdNkED42">
 <input type="hidden" name="referringResource" value="/privacy.html">
 </fieldset>
 </form>
@@ -231,104 +263,116 @@ Discover the benefits of membership.<br>
 
 <span class="clear"></span>
 
-<p class="copyright"><a href="/terms.html">© 2001-2005</a> Delia Smith / NC Internet Ltd. &nbsp; | &nbsp; <a href="http://www.othermedia.com/">Web design by the OTHER media</a></p>
+<p class="copyright"><a href="/terms.html">© 2001-2006</a> Delia Smith / NC Internet Ltd. &nbsp; | &nbsp; <a href="http://www.othermedia.com/">Web design by the OTHER media, London</a></p>
 </div></div>
 </div>
 
 <div class="advert-header-large">
+<!-- VC active -->
 <script type="text/javascript">
-ValueHost = "hs0288921";
+<!--
+// ValueParameters
+ValueHost = "hs0003673";
 ValueLoaded = false;
 ValueID = "pagebuster";
 ValueVersion = "1.2";
 ValueBannerType = "std";
 var ValueWidths_Heights = new Array("468x60");
-ValueNoText = 1;
-ValueBannerSizeOrder = "listed";
-ValueKeywords = "";
-</script>
-<script type="text/javascript" src="http://oz.valueclick.com/jsmaster"></script>
-<script type="text/javascript">
-if (ValueLoaded) ValueShowAd();
-</script>
-<noscript>
-<a href="http://oz.valueclick.com/redirect?host=hs0288921&t=std&b=602&noscript=1&v=0;k=;msizes=468x60;bso=listed" target="_top"><img border="0" width="468" height="60" alt="Click here to visit our sponsor"
-src="http://oz.valueclick.com/cycle?host=hs0288921&t=std&b=602&noscript=1;k=;msizes=468x60;bso=listed"></a>
-</noscript>
-</div>
 
-<div class="advert-header-small">
-<script type="text/javascript">
-ValueHost = "hs0288921";
-ValueLoaded = false;
-ValueID = "pagebuster";
-ValueVersion = "1.2";
-ValueBannerType = "std";
-var ValueWidths_Heights = new Array("120x60");
 ValueNoText = 1;
+ValueHCat = "HP";
 ValueBannerSizeOrder =  "listed";
-ValueKeywords = "";
+ValueKWParam = "qx";
+//-->
 </script>
-<script type="text/javascript" src="http://oz.valueclick.com/jsmaster"></script>
+<script type="text/javascript" src="http://ads.deli.valueclick.net/jsmaster"></script>
 <script type="text/javascript">
+<!--
 if (ValueLoaded) ValueShowAd();
+//-->
 </script>
 <noscript>
-<a href="http://oz.valueclick.com/redirect?host=hs0288921&t=std&b=602&noscript=1&v=0;k=;msizes=120x60;bso=listed" target="_top"><img border="0" width="120" height="60" alt="Click here to visit our sponsor"
-src="http://oz.valueclick.com/cycle?host=hs0288921&t=std&b=602&noscript=1;k=;msizes=120x60;bso=listed"></a>
+<a href="http://ads.deli.valueclick.net/redirect?host=hs0003673&amp;t=std&amp;b=indexpage&amp;noscript=1&amp;v=0;hcat=HP;msizes=468x60;bso=listed;r=qx" target="_top"><img border="0" width="468" height="60" alt="Click here to visit our sponsor" arc="http://ads.deli.valueclick.net/cycle?host=hs0003673&amp;t=std&amp;b=indexpage&amp;noscript=1;hcat=HP;msizes=$468x60;bso=listed;r=qx"></a>
 </noscript>
+<!-- vc active -->
 </div>
-<div class="advert-left-small">
+<div class="advert-header-small">
+<!-- VC active -->
 <script type="text/javascript">
-ValueHost = "hs0288921";
+<!--
+// ValueParameters
+ValueHost = "hs0003673";
 ValueLoaded = false;
 ValueID = "pagebuster";
 ValueVersion = "1.2";
 ValueBannerType = "std";
 var ValueWidths_Heights = new Array("120x60");
+
 ValueNoText = 1;
-ValueKeywords = "";
+ValueHCat = "HP";
+ValueBannerSizeOrder =  "listed";
+ValueKWParam = "qx";
+//-->
 </script>
-<script type="text/javascript" src="http://oz.valueclick.com/jsmaster"></script>
+<script type="text/javascript" src="http://ads.deli.valueclick.net/jsmaster"></script>
 <script type="text/javascript">
+<!--
 if (ValueLoaded) ValueShowAd();
+//-->
 </script>
+<noscript>
+<a href="http://ads.deli.valueclick.net/redirect?host=hs0003673&amp;t=std&amp;b=indexpage&amp;noscript=1&amp;v=0;hcat=HP;msizes=120x60;bso=listed;r=qx" target="_top"><img border="0" width="120" height="60" alt="Click here to visit our sponsor" arc="http://ads.deli.valueclick.net/cycle?host=hs0003673&amp;t=std&amp;b=indexpage&amp;noscript=1;hcat=HP;msizes=$120x60;bso=listed;r=qx"></a>
+</noscript>
+<!-- vc active -->
 </div>
 <div class="advert-left-large">
+<!-- VC active -->
 <script type="text/javascript">
-ValueHost = "hs0288921";
+<!--
+// ValueParameters
+ValueHost = "hs0003673";
 ValueLoaded = false;
 ValueID = "pagebuster";
 ValueVersion = "1.2";
 ValueBannerType = "std";
 var ValueWidths_Heights = new Array("120x600");
+
 ValueNoText = 1;
-ValueBannerSizeOrder = "listed";
-ValueKeywords = "";
+ValueHCat = "HP";
+ValueBannerSizeOrder =  "listed";
+ValueKWParam = "qx";
+//-->
 </script>
-<script type="text/javascript" src="http://oz.valueclick.com/jsmaster"></script>
+<script type="text/javascript" src="http://ads.deli.valueclick.net/jsmaster"></script>
 <script type="text/javascript">
+<!--
 if (ValueLoaded) ValueShowAd();
+//-->
 </script>
 <noscript>
-<a href="http://oz.valueclick.com/redirect?host=hs0288921&t=std&b=602&noscript=1&v=0;k=;msizes=120x600;bso=listed" target="_top">
-<img border="0" width="120" height="600" alt="Click here to visit our sponsor" src="http://oz.valueclick.com/cycle?host=hs0288921&t=std&b=602&noscript=1;k=;msizes=120x600;bso=listed">
-</a>
+<a href="http://ads.deli.valueclick.net/redirect?host=hs0003673&amp;t=std&amp;b=indexpage&amp;noscript=1&amp;v=0;hcat=HP;msizes=120x600;bso=listed;r=qx" target="_top"><img border="0" width="120" height="600" alt="Click here to visit our sponsor" arc="http://ads.deli.valueclick.net/cycle?host=hs0003673&amp;t=std&amp;b=indexpage&amp;noscript=1;hcat=HP;msizes=$120x600;bso=listed;r=qx"></a>
 </noscript>
-<script language="JavaScript">
-ValueHost = "hs0288921";
+<!-- vc active -->
+</div>
+<script type="text/javascript">
+<!--
+// ValueParameters
+ValueHost = "hs0003673";
 ValueLoaded = false;
 ValueID = "pagebuster";
 ValueVersion = "1.2";
 ValueBannerType = "pop";
 ValuePopSize = "full";
-ValueNoText = 1;
-</script>
-<script language="Javascript" src="http://oz.valueclick.com/jsmaster"></script>
-<script language="JavaScript">
-if (ValueLoaded) ValueShowAd();
-</script>
-</div>
 
+ValueNoText = 1;
+
+//-->
+</script>
+<script type="text/javascript" src="http://ads.deli.valueclick.net/jsmaster"></script>
+<script type="text/javascript">
+<!--
+if (ValueLoaded) ValueShowAd();
+//-->
+</script>
 
 </body></html>
