--- a/g/gs/gsn/gsn.com.html
+++ b/g/gs/gsn/gsn.com.html
@@ -1,10 +1,126 @@
-<!--The following is the downloaded HTML source of the gsn.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210114127id_/http%3A//gsn.com/corporate/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gsn.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615135630id_/http%3A//www.gsn.com/corporate/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>GSN - The Network For Games</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="/elements/css/main.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="/elements/js/AC_RunActiveContent.js"></script> 
+<!-- flash active -->
+<script language="JavaScript" type="text/javascript">
+<!--
+// -----------------------------------------------------------------------------
+// Globals
+// Major version of Flash required
+var requiredMajorVersion = 8;
+// Minor version of Flash required
+var requiredMinorVersion = 0;
+// Revision of Flash required
+var requiredRevision = 0;
+// the version of javascript supported
+var jsVersion = 1.0;
+// -----------------------------------------------------------------------------
+// -->
+</script>
+<script language="VBScript" type="text/vbscript">
+<!-- // Visual basic helper required to detect Flash Player ActiveX control version information
+Function VBGetSwfVer(i)
+  on error resume next
+  Dim swControl, swVersion
+  swVersion = 0
+  
+  set swControl = CreateObject("ShockwaveFlash.ShockwaveFlash." + CStr(i))
+  if (IsObject(swControl)) then
+    swVersion = swControl.GetVariable("$version")
+  end if
+  VBGetSwfVer = swVersion
+End Function
+// -->
+</script>
+<script language="JavaScript1.1" type="text/javascript">
+<!-- // Detect Client Browser type
+var isIE  = (navigator.appVersion.indexOf("MSIE") != -1) ? true : false;
+var isWin = (navigator.appVersion.toLowerCase().indexOf("win") != -1) ? true : false;
+var isOpera = (navigator.userAgent.indexOf("Opera") != -1) ? true : false;
+jsVersion = 1.1;
+// JavaScript helper required to detect Flash Player PlugIn version information
+function JSGetSwfVer(i){
+	// NS/Opera version >= 3 check for Flash plugin in plugin array
+	if (navigator.plugins != null && navigator.plugins.length > 0) {
+		if (navigator.plugins["Shockwave Flash 2.0"] || navigator.plugins["Shockwave Flash"]) {
+			var swVer2 = navigator.plugins["Shockwave Flash 2.0"] ? " 2.0" : "";
+      		var flashDescription = navigator.plugins["Shockwave Flash" + swVer2].description;
+			descArray = flashDescription.split(" ");
+			tempArrayMajor = descArray[2].split(".");
+			versionMajor = tempArrayMajor[0];
+			versionMinor = tempArrayMajor[1];
+			if ( descArray[3] != "" ) {
+				tempArrayMinor = descArray[3].split("r");
+			} else {
+				tempArrayMinor = descArray[4].split("r");
+			}
+      		versionRevision = tempArrayMinor[1] > 0 ? tempArrayMinor[1] : 0;
+            flashVer = versionMajor + "." + versionMinor + "." + versionRevision;
+      	} else {
+			flashVer = -1;
+		}
+	}
+	// MSN/WebTV 2.6 supports Flash 4
+	else if (navigator.userAgent.toLowerCase().indexOf("webtv/2.6") != -1) flashVer = 4;
+	// WebTV 2.5 supports Flash 3
+	else if (navigator.userAgent.toLowerCase().indexOf("webtv/2.5") != -1) flashVer = 3;
+	// older WebTV supports Flash 2
+	else if (navigator.userAgent.toLowerCase().indexOf("webtv") != -1) flashVer = 2;
+	// Can't detect in all other cases
+	else {
+		
+		flashVer = -1;
+	}
+	return flashVer;
+} 
+// If called with no parameters this function returns a floating point value 
+// which should be the version of the Flash Player or 0.0 
+// ex: Flash Player 7r14 returns 7.14
+// If called with reqMajorVer, reqMinorVer, reqRevision returns true if that version or greater is available
+function DetectFlashVer(reqMajorVer, reqMinorVer, reqRevision) 
+{
+ 	reqVer = parseFloat(reqMajorVer + "." + reqRevision);
+   	// loop backwards through the versions until we find the newest version	
+	for (i=25;i>0;i--) {	
+		if (isIE && isWin && !isOpera) {
+			versionStr = VBGetSwfVer(i);
+		} else {
+			versionStr = JSGetSwfVer(i);		
+		}
+		if (versionStr == -1 ) { 
+			return false;
+		} else if (versionStr != 0) {
+			if(isIE && isWin && !isOpera) {
+				tempArray         = versionStr.split(" ");
+				tempString        = tempArray[1];
+				versionArray      = tempString .split(",");				
+			} else {
+				versionArray      = versionStr.split(".");
+			}
+			versionMajor      = versionArray[0];
+			versionMinor      = versionArray[1];
+			versionRevision   = versionArray[2];
+			
+			versionString     = versionMajor + "." + versionRevision;   // 7.0r24 == 7.24
+			versionNum        = parseFloat(versionString);
+        	// is the major.revision >= requested major.revision AND the minor version >= requested minor
+			if ( (versionMajor > reqMajorVer) && (versionNum >= reqVer) ) {
+				return true;
+			} else {
+				return ((versionNum >= reqVer && versionMinor >= reqMinorVer) ? true : false );	
+			}
+		}
+	}	
+	return (reqVer ? false : 0.0);
+}
+// -->
+</script>
+
 </head>
 <body>
 
@@ -84,20 +200,26 @@ hbx.pec="";//ERROR CODES
 <a href="javascript:_hbLink('Flash+Nav+Store','','432,12,62,61')"></a>
 <a href="javascript:_hbLink('Flash+Nav+Rewards','','502,26,62,61')"></a>
 
-<!--text used in the movie-->
-<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" id="gsnNav" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="581" height="102">
-  <param name="movie" value="/elements/swf/nav.swf?base_url=www.gsn.com">
-  <param name="quality" value="high">
-  <param name="menu" value="false">
-  <param name="wmode" value="opaque">
-  <embed src="/elements/swf/nav.swf?base_url=www.gsn.com" name="gsnNav" width="581" height="102" wmode="opaque" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" menu="false">
-</object>
+
+<script language="JavaScript" type="text/javascript">
+<!-- 
+	AC_FL_RunContent( 'classid', 'clsid:D27CDB6E-AE6D-11cf-96B8-444553540000', 'width', '581', 'height', '102', 'codebase', 'http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab', 'movie', '/elements/swf/nav?base_url=www.gsn.com', 'mode', 'opaque','src', '/elements/swf/nav?base_url=www.gsn.com','quality', 'high', 'name', 'gsnNav', 'menu', 'false', 'allowScriptAccess', 'sameDomain', 'type', 'application/x-shockwave-flash', 'pluginspage', 'http://www.macromedia.com/go/getflashplayer');
+// -->
+</script>
+<noscript>
+	// Provide alternate content for browsers that do not support scripting
+	// or for those that have scripting disabled.
+  	Alternate HTML content should be placed here. This content requires the Macromedia Flash Player.
+  	<a href="http://www.macromedia.com/go/getflash/">Get Flash</a>  	
+</noscript>
+
+
 </td>
     <!-- 0b -->
-    <td width="160"><div id="onnow"><img src="/elements/images/saturday.gif" alt="saturday" width="26" height="102" hspace="0" vspace="0" border="0" align="left"><img src="/elements/images/onnow.gif" alt="what\'s on now" width="134" height="17"><br>
-<span class="onnowshow">Paid Programming</span><br>
-<span class="onnowtime">4:00am et</span><br><img src="/elements/images/onnext.gif" alt="up next" width="134" height="17"><br>   
-<span class="onnowshow"><a href="/specific_page_elements.php?link_id=S4" onmouseover="window.status='Card Sharks'; return true" onmouseout="window.status=''; " target="_top">Card Sharks</a></span><br><span class="onnowtime">9:00am et</span><br><span class="onnowsched"><a href="/onair/index.php" onmouseover="window.status='view entire schedule'; return true" onmouseout="window.status=''; " target="_top">view entire schedule</a></span></div> </td>
+    <td width="160"><div id="onnow"><img src="/elements/images/thursday.gif" alt="thursday" width="26" height="102" hspace="0" vspace="0" border="0" align="left"><img src="/elements/images/onnow.gif" alt="what\'s on now" width="134" height="17"><br>
+<span class="onnowshow"><a href="/specific_page_elements.php?link_id=S59" onmouseover="window.status='To Tell The Truth'; return true" onmouseout="window.status=''; " target="_top">To Tell The Truth</a></span><br>
+<span class="onnowtime">9:30am et</span><br><img src="/elements/images/upnext.gif" alt="up next" width="134" height="17"><br>   
+<span class="onnowshow"><a href="/specific_page_elements.php?link_id=S7" onmouseover="window.status='Family Feud (Dawson)'; return true" onmouseout="window.status=''; " target="_top">Family Feud (Dawson)</a></span><br><span class="onnowtime">10:00am et</span><br><!--<span class="onnowsched"><a href="/onair/index.php" onmouseover="window.status='view entire schedule'; return true" onmouseout="window.status=''; "  target="_top">view entire schedule</a></span>--><a href="/onair/index.php" onmouseover="window.status='view entire schedule'; return true" onmouseout="window.status=''; " target="_top"><img src="/elements/images/schedule.gif" alt="view entire schedule and find GSN in your area" width="134" height="17" border="0"></a></div> </td>
   </tr>
   <tr>
     <!-- submenu -->
@@ -105,28 +227,14 @@ hbx.pec="";//ERROR CODES
 <a href="/user_elements/register.php" onmouseover="window.status='click here to register'; return true" onmouseout="window.status=''; "><img src="/elements/images/green_sq.gif" alt="click here to register" width="10" height="10" hspace="4" border="0">register here</a>
 </div></td>
     <!-- 160x600 -->
-    <td rowspan="2" valign="top"><div id="banner160">
-<script language="JavaScript">
-<!--
-// ValueParameters ::Cash Games::
-ValueHost = "hs0289811";
-ValueLoaded = false;
-ValueID = "pagebuster";
-ValueVersion = "1.2";
-ValueBannerType = "std";
-var ValueWidths_Heights = new Array("160x600");
-
-ValueNoText = 1;
-
-//-->
-</script>
-<script language="Javascript" src="http://oz.valueclick.com/jsmaster"></script>
-<script language="JavaScript">
-<!--
-if (ValueLoaded) ValueShowAd();
-//-->
-</script><noscript><A HREF="http://oz.valueclick.com/redirect?host=hs0294550&t=std&b=indexpage&noscript=1&v=0;msizes=160x600" TARGET="_top"><IMG BORDER="0" WIDTH="160" HEIGHT="600" ALT="Click here to visit our sponsor"
-SRC="http://oz.valueclick.com/cycle?host=hs0294550&t=std&b=indexpage&noscript=1;msizes=160x600"></A></noscript><br><img src="/elements/images/ad_bottom.gif" alt="advertisement" width="160" height="20"></div>
+    <td rowspan="2" valign="top"><!-- ValueClick Media 120x600 and 160x600 SkyScraper CODE for gsn.com  -->
+<div id="banner160" style="z-index:100">
+<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=24362&amp;m=3&amp;tp=7&amp;d=j&amp;t=n"></script>
+<noscript><a href="http://media.fastclick.net/w/click.here?sid=24362&m=3&c=1" target="_blank">
+<img src="http://media.fastclick.net/w/get.media?sid=24362&m=3&tp=7&d=s&c=1" width=160 height=600 border=1></a>
+</noscript>
+<br><img src="/elements/images/ad_bottom.gif" alt="advertisement1" width="160" height="20"></div>
+<!-- ValueClick Media 120x600 and 160x600 SkyScraper CODE for gsn.com -->
 </td>
   </tr>
   <tr>
@@ -162,7 +270,7 @@ SRC="http://oz.valueclick.com/cycle?host=hs0294550&t=std&b=indexpage&noscript=1;
    <p><strong>Cookies </strong></p>
    <p>When you visit the GSN Website or any advertisements appearing on the Website, or use one or more of the Services, we may use an industry-wide technology called “cookies.” A cookie is a piece of data that a Website can send to your browser, which may then store the cookie on your computer if your browser is enabled to accept cookies. Transparent gifs assist in the delivery of cookies and enable us to enhance your use of the Services. This technology allows us to better match your interests and preferences or simply to facilitate your signing in to use the Website and its Services. Most Internet browsers will allow you to erase cookies from your computer hard drive, block acceptance of cookies, or receive a warning before a cookie is stored. Please note, however, that if you block cookies, many portions of the Website will not function properly. You should refer to your browser instructions or help screen to learn more about how to manage cookies. </p>
    <p><strong>Use of Information Collected </strong></p>
-   <p>Except as specifically outlined in this Privacy Policy, we do not share your personal information with non-affiliated third parties without your permission. We may disclose aggregated information, such as demographic information, and certain statistical analysis to third parties, including advertisers and other business partners. This aggregated information will include any personal information. We may, however, share your personal information with our owners and other affiliated companies, including Sony Pictures Entertainment, Liberty Media, and their parents, subsidiaries, or affiliated companies, in order to provide portions of the Website and/or Services (e.g., to provide fulfillment for prizes won in a GSN sweepstakes or contest), or to provide other support for a GSN promotion. Please refer to the individual privacy policies of our affiliates for details concerning how they handle your personal and non-personal information. </p>
+   <p>Except as specifically outlined in this Privacy Policy, we do not share your personal information with non-affiliated third parties without your permission. We may disclose aggregated information, such as demographic information, and certain statistical analysis to third parties, including advertisers and other business partners. This aggregated information will not include any personal information. We may, however, share your personal information with our owners and other affiliated companies, including Sony Pictures Entertainment, Liberty Media, and their parents, subsidiaries, or affiliated companies, in order to provide portions of the Website and/or Services (e.g., to provide fulfillment for prizes won in a GSN sweepstakes or contest), or to provide other support for a GSN promotion. Please refer to the individual privacy policies of our affiliates for details concerning how they handle your personal and non-personal information. </p>
    <p>GSN will not disclose your personal information to non-affiliated third parties, unless we have previously informed you of the disclosure, have been given your consent to disclose, or we are required by law to disclose. In the case of Special Promotions, the name of any third parties involved in the promotion will be disclosed, and when applicable, you may be given the option of providing your information to them. We reserve the right to disclose non-personal information in any way we deem appropriate. </p>
    <p>GSN uses third party vendors to provide portions of the Website and its Services. By using the Services, you are deemed to consent to the use of these vendors. These vendors are contractually restricted to using personal information for the sole purpose of providing the Services and are strictly prohibited from sharing, selling, or otherwise distributing any personal data of our customers. </p>
    <p>As stated in the Terms of Service, you will be deemed to have consented to the transfer and/or disclosure to a subsequent owner of this Website, of any personal information submitted by you and contained in GSN's database if GSN assigns all of its rights and obligations regarding the use of your personal information at the time of a merger, acquisition, or sale of all or substantially all of GSN's assets. </p>
@@ -196,7 +304,7 @@ SRC="http://oz.valueclick.com/cycle?host=hs0294550&t=std&b=indexpage&noscript=1;
   </tr>
   <!-- 4a -->
   <tr>
-  <td colspan="3"><div id="footer"><a href="/crossroads.php?link_id=U1" onmouseover="window.status='my GSN profile'; return true">my GSN profile</a> | <a href="/corporate/" onmouseover="window.status='about GSN'; return true">about GSN</a> | <a href="/help/getgsn.php" onmouseover="window.status='get GSN'; return true">get GSN</a> | <a href="/help/sitemap.php" onmouseover="window.status='site map'; return true">site map</a> | <a href="/help/" onmouseover="window.status='faq'; return true">help</a> | <a href="/corporate/privacy.php" onmouseover="window.status='privacy'; return true">privacy</a> | <a href="/corporate/terms.php" onmouseover="window.status='terms'; return true">terms</a> | <a href="/corporate/press.php" onmouseover="window.status='press'; return true">press</a> </div></td>
+  <td colspan="3"><div id="footer"><a href="/crossroads.php?link_id=U1" onmouseover="window.status='my GSN profile'; return true">my GSN profile</a> | <a href="/corporate/" onmouseover="window.status='about GSN'; return true">about GSN</a> | <a href="/help/getgsn.php" onmouseover="window.status='get GSN'; return true">get GSN</a> | <a href="/help/sitemap.php" onmouseover="window.status='site map'; return true">site map</a> | <a href="/help/" onmouseover="window.status='faq'; return true">help</a> | <a href="/corporate/privacy.php" onmouseover="window.status='privacy'; return true">privacy</a> | <a href="/corporate/terms.php" onmouseover="window.status='terms'; return true">terms</a> | <a href="/corporate/press.php" onmouseover="window.status='press'; return true">press</a> | <a href="/jobs/index.php" onmouseover="window.status='press'; return true">careers at GSN</a> </div></td>
   <td><div id="sony"><a href="http://www.sony.com/?CMP=AFC-KM4536320702" target="_blank" onmouseover="window.status='See The World of SONY'; return true"><img src="/elements/images/sony.gif" alt="see the world of Sony" border="0"></a></div></td>
 </tr>
 <tr>
