--- a/t/ti/tim/timex.com.html
+++ b/t/ti/tim/timex.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the timex.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219140121id_/http%3A//www.timex.com/html/help_privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the timex.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615135645id_/http%3A//www.timex.com/html/help_privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<title>Timex - Help - Customer Privacy </title>
+<title>Timex - Help - Customer Privacy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="Keywords" content="timex, time, watch, hour, minute, second, setting, timex watch, wristwatch, wrist instrument, clock, atomic clock, alarm, chime, analog, digital, calendar, day, date, leap year, LCD, display, Ironman, Triathlon, INDIGLO, luminescent, expedition, outdoor, quality, reliability, precision, bargain, discount, sale, fashion, style, band, expansion band, strap, polyurethane, Fast Wrap, stainless steel, aluminum, bracelet, silver, gold, battery, jewelry, accessories, leather, affordable, chronograph, stopwatch, timer, chrono, timer, buy, shop, turn, pull, pulse, crown set, ring set, combo, tank, dual, metal, classics, sports, rush, tmx, i-control, interactive, reefgear, easy reader, datalink, software, Motorola, scrolling, daylight saving, time zone, wireless, workout, fitness, fitness monitor, exercise, heart, heart rate, heartbeat, monitor, performance, speed, distance, pace, compass, digital compass, kids watch, time teacher, lap, lap memory, recall, lap counter, split, water resistant, resistance, shock-resistant, synchronize, lifestyle, licking, ticking, mystery answer, grip clip, durable, lightweight, loss protection, life is ticking, bodylink, body link, garmin, gps, satellite, speedpass, mobil, data recorder, analyze, store, upload, link, usb, performance monitor, PDA, software, outlook">
 
@@ -15,7 +15,6 @@
 <link href="/timexShell.css" rel="stylesheet" type="text/css">
 <link href="/timexCopy.css" rel="stylesheet" type="text/css">
 <link href="/timexElements.css" rel="stylesheet" type="text/css">
-<link href="/timexHoliday.css" rel="stylesheet" type="text/css">
 
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#000000" vlink="#000000" alink="#333333" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
@@ -23,12 +22,12 @@
 <center>
 
 <!-- START header table -->
-<table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td align="center" class="holidayHeader"><table width="800" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td width="142" align="right"><img src="/timex_images/common/spacer.gif" width="142" height="12"><a href="http://www.timex.com/index.html"><img src="/timex_images/holiday/holiday_logo.gif" width="120" height="53" border="0"></a><img src="/timex_images/common/spacer.gif" width="142" height="12"></td><td width="17"><img src="/timex_images/common/spacer.gif" width="17" height="17"></td><td width="633" valign="top"><table width="633" height="65" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td valign="top"><img src="/timex_images/common/spacer.gif" width="633" height="19"><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td align="left"><table border="0" cellpadding="2" cellspacing="0"><tbody><tr>
+<table width="800" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td width="142" align="right"><a href="http://www.timex.com/index.html"><img src="/timex_images/interfacenew/timex_logo.gif" height="76" border="0"></a><br><br></td><td width="17"><img src="/timex_images/common/spacer.gif" width="17" height="17"></td><td width="633" valign="top"><table width="633" height="65" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td valign="top"><img src="/timex_images/common/spacer.gif" width="633" height="19"><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td align="left"><table border="0" cellpadding="2" cellspacing="0"><tbody><tr>
 <td class="navHomeTopStaticRed">SHOP:</td>
 <td align="center" class="navHomeTop"><a href="http://www.timex.com/bin/catalog.tmx?key=m">&nbsp;MENS&nbsp;</a></td><td align="center" class="navHomeTopStatic">/</td><td align="center" class="navHomeTop"><a href="http://www.timex.com/bin/catalog.tmx?key=w">&nbsp;WOMENS&nbsp;</a></td><td align="center" class="navHomeTopStatic">/</td><td align="center" class="navHomeTop"><a href="http://www.timex.com/bin/catalog.tmx?key=k">&nbsp;KIDS&nbsp;</a></td><td align="center" class="navHomeTopStatic">/</td><td align="center"><span class="navHomeTop"><a href="http://www.timex.com/html/latest_products.html">&nbsp;NEW PRODUCTS&nbsp;</a></span></td><td align="center" class="navHomeTopStatic">/</td><td align="center"><span class="navHomeTop"><a href="http://www.timex.com/gift_finder/">&nbsp;GIFTS&nbsp;</a></span></td></tr></tbody></table></td><td align="right">
-<table border="0" cellspacing="0" cellpadding="2"><tbody><tr><td align="center"><span class="navHomeTop"><a href="http://www.timex.com/bin/cart.tmx"><img src="/timex_images/holiday/holiday_cart.gif" name="cartIMG" width="11" height="10" border="0" id="cartIMG"></a>
-</span></td><td align="center" class="navHomeTop"><a href="http://www.timex.com/bin/cart.tmx">&nbsp;SHOPPING CART&nbsp;</a></td><td align="center" class="navHomeTopStatic">/</td><td align="right" class="navHomeTop"><a href="https://www.timex.com/sec/receipt.tmx">&nbsp;ORDER STATUS&nbsp;</a></td></tr></tbody></table>
-</td></tr></tbody></table><table width="633" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td background="/timex_images/holiday/holiday_dotted_line.gif"><img src="/timex_images/common/spacer.gif" width="633" height="1"></td></tr></tbody></table><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><img src="/timex_images/common/spacer.gif" width="10" height="10"></td><td align="right"><table border="0" cellspacing="0" cellpadding="2"><form name="searchform" method="get" action="http://search.timex.com/search"></form><tbody><tr><td><input name="q" type="text" class="textHomeLgFeature" value="" size="20" maxlength="255"></td><td class="navHomeTop"><input type="hidden" name="site" value="timex"> <input type="hidden" name="client" value="timexus"> <input type="hidden" name="restrict" value="timexus"> <input type="hidden" name="proxystylesheet" value="timex"> <input type="hidden" name="output" value="xml_no_dtd"> <a href="#" onmouseover="status='http://search.timex.com/search';return true;" onmouseout="status='';" onclick="javascript:searchform.submit();return false;" style="cursor: pointer">&nbsp;SEARCH&nbsp;</a></td></tr></tbody></table></td></tr></tbody></table><img src="/timex_images/common/spacer.gif" width="633" height="5"></td></tr></tbody></table></td><td><img src="/timex_images/common/spacer.gif" width="9" height="9"></td></tr></tbody></table></td></tr><tr><td align="center" class="holidaySpacer"></td></tr></tbody></table>
+<table border="0" cellspacing="0" cellpadding="2"><tbody><tr><td align="center"><span class="navHomeTop"><a href="http://www.timex.com/bin/cart.tmx"><img src="/timex_images/interfacenew/cart_sm.gif" name="cartIMG" width="11" height="10" border="0" id="cartIMG"></a>
+</span></td><td align="center" class="navHomeTop"><a href="http://www.timex.com/bin/cart.tmx">SHOPPING CART</a></td><td align="center" class="navHomeTopStatic">/</td><td align="right" class="navHomeTop"><a href="https://www.timex.com/sec/receipt.tmx">ORDER STATUS</a></td></tr></tbody></table>
+</td></tr></tbody></table><table width="633" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td bgcolor="#999999"><img src="/timex_images/common/spacer.gif" width="633" height="1"></td></tr></tbody></table><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><img src="/timex_images/common/spacer.gif" width="10" height="10"></td><td align="right"><table border="0" cellspacing="0" cellpadding="2"><form name="searchform" method="get" action="http://search.timex.com/search"></form><tbody><tr><td><input name="q" type="text" class="textHomeLgFeature" value="" size="20" maxlength="255"></td><td class="navHomeTop"><input type="hidden" name="site" value="timex"> <input type="hidden" name="client" value="timexus"> <input type="hidden" name="restrict" value="timexus"> <input type="hidden" name="proxystylesheet" value="timex"> <input type="hidden" name="output" value="xml_no_dtd"> <a href="#" onmouseover="status='http://search.timex.com/search';return true;" onmouseout="status='';" onclick="javascript:searchform.submit();return false;" style="cursor: pointer">SEARCH</a></td></tr></tbody></table></td></tr></tbody></table><img src="/timex_images/common/spacer.gif" width="633" height="5"></td></tr></tbody></table></td><td><img src="/timex_images/common/spacer.gif" width="9" height="9"></td></tr></tbody></table>
 <!-- STOP header table -->
 
 <!-- START content table -->
@@ -107,118 +106,15 @@
 <td bgcolor="#333333"><img src="../timex_images/common/spacer.gif" width="100" height="20"></td>
 </tr>
 </tbody></table>
-<!-- START OF WEBTRENDS LIVE TAG -->
-<!-- Copyright 2002 NetIQ Corporation -->
-<!--  For privacy concerns, check our Privacy Policy at http://www.webtrendslive.com/wtl_system/privacy_policy.htm -->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 
-<!-- eCommerce Revenue Tracking (patent pending) -->
-<!-- For eCommerce implementation, visit the following page: -->
-<!-- http://www.webtrendslive.com/wtl_system/support/online_help/open_help.asp?helppage=techsupport_code_ecommerce&redirection=help -->
+<script type="text/javascript">
 
-<script language="JavaScript1.2">
+_uacct = "UA-291033-1";
 
-<!--
-var wtl_imgarray = new Array;
-var wtl_ptr = 0;
-function wtl_Tag6(wtl_TagID,wtl_SID,wtl_URL,wtl_Title,CONTENTGROUP)
-{
-        function wtl_createImage(wtl_src)
-        {
-                if (document.images)
-                {
-                        wtl_imgarray[wtl_ptr] = new Image;
-                        wtl_imgarray[wtl_ptr].src = wtl_src;
-                        wtl_ptr++;
-                }
-        }
-
-        function D8( d)
-        {
-                var fwd=1, seed= new Date('01/01/2000'), key= "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
-                var s= key.charAt( d.getFullYear()-2000)+key.charAt( d.getMonth()+1)+key.charAt( d.getDate());
-                s+= key.charAt( d.getHours())+key.charAt( d.getMinutes())+key.charAt( d.getSeconds());
-                while( seed.getDay()!=fwd) seed= new Date(seed.getTime() + 86400000);
-                var w= Math.floor( (d.getTime()-(seed.getTime()+86400000)) / 604800000 );
-                s+= key.charAt( (w-(w%16))/16 );
-                s+= key.charAt( w%16);
-                return s;
-        }
-
-        function A( B, C)
-        {
-                W+="&"+B+"="+escape(C);
-        }
-
-        var t = new Date();
-        var W="http"+(window.location.protocol.indexOf('https:')==0?'s':'')+"://statse.webtrendslive.com/S" + wtl_SID + "/button6.asp?tagver=" + wtl_TagVer + "&si=" + wtl_TagID + "&fw=" + wtl_FWD;
-        A( "server", typeof(SERVER)== "string" ? SERVER : "");
-        A( "order", typeof(ORDER)== "string" ? ORDER : "");
-        A( "Group", typeof(CONTENTGROUP)== "string" ? CONTENTGROUP : "");
-        A( "invoice", typeof(INVOICE)== "string" ? INVOICE : "");
-        A( "cartview", typeof(CARTVIEW)== "string" ? CARTVIEW : "");
-        A( "cartadd", typeof(CARTADD)== "string" ? CARTADD : "");
-        A( "cartremove", typeof(CARTREMOVE)== "string" ? CARTREMOVE : "");
-        A( "checkout", typeof(CHECKOUT)== "string" ? CHECKOUT : "");
-        A( "cartbuy", typeof(CARTBUY)== "string" ? CARTBUY : "");
-        A( "adcampaign", typeof(ADCAMPAIGN)== "string" ? ADCAMPAIGN : "");
-        A( "tz", t.getTimezoneOffset());
-        A( "ch", t.getHours());
-        A( "cl", D8(t));
-        A( "ti", wtl_Title);
-        A( "url", wtl_URL);
-        A( "rf", window.document.referrer);
-        A( "js", "Yes");
-        A( "ul", navigator.appName=="Netscape" ? navigator.language : navigator.userLanguage);
-        if(typeof(screen)=="object")
-        {
-        A( "sr", screen.width+"x"+screen.height);
-        A( "cd", screen.colorDepth);
-
-        A( "jo", navigator.javaEnabled() ? "Yes" : "No");
-        }
-
-        if( W.length>2048 && navigator.userAgent.indexOf('MSIE')>=0)
-                W= W.substring( 0, 2043)+"&tu=1";
-
-        wtl_createImage(W);
-}
-//-->
-</script>
-
-<!-- Code can be separated at this junction -->
-
-<script language="JavaScript">
-
-<!--
-        var wtl_TagVer = 6;
-        var wtl_FWD = 6;
-        var wtl_url = document.URL;
-        var wtl_title = document.title;
-        var wtl_TagID = 125839;
-        var wtl_SID = "125839";
-        WTL_TAG = new Image;
-        WTL_TAG.ID = "WTL_TAG";
-
-        var ORDER= "";
-        var SERVER= "mdwp";
-        var CONTENTGROUP= "";
-        var INVOICE= "";
-        var CARTVIEW= "";
-        var CARTADD= "";
-        var CARTREMOVE= "";
-        var CHECKOUT= "";
-        var CARTBUY= "";
-        var ADCAMPAIGN= "";
-
-        wtl_Tag6(wtl_TagID,wtl_SID,wtl_url,wtl_title,CONTENTGROUP);
-
-//-->
+urchinTracker();
 
 </script>
-<noscript>
-<IMG BORDER="0" WIDTH="1" HEIGHT="1" SRC="http://statse.webtrendslive.com/S125839/button6.asp?tagver=6&si=125839&fw=6&js=No">
-</noscript>
-<!-- END OF WEBTRENDS LIVE TAG -->
 
 <!-- STOP content area -->
 
@@ -226,7 +122,7 @@ function wtl_Tag6(wtl_TagID,wtl_SID,wtl_URL,wtl_Title,CONTENTGROUP)
 <!-- STOP content table -->
 
 <!-- START footer table -->
-<table width="800" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td width="142"><img src="/timex_images/common/spacer.gif" width="142" height="17"></td><td width="17"><img src="/timex_images/common/spacer.gif" width="17" height="17"></td><td valign="top"><img src="/timex_images/common/spacer.gif" width="633" height="5"><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td align="center"><table border="0" cellpadding="2" cellspacing="0"><tbody><tr><td align="center" class="navHomeBot"><a href="http://www.timex.com/html/our_company.html">&nbsp;COMPANY INFO/TOUR &nbsp;</a></td><td align="center" class="navHomeBotStatic">/</td><td align="center" class="navHomeBot"><a href="http://www.timex.com/corp_gifts/">&nbsp;PREMIUMS &amp; INCENTIVES &nbsp;</a></td><td align="center" class="navHomeBotStatic">/</td><td align="center" class="navHomeBot"><a href="http://pr.timex.com">&nbsp;MEDIA&nbsp;</a></td><td align="center" class="navHomeBotStatic">/</td><td align="center"><span class="navHomeBot"><a href="http://www.timex.com/sponsorship/">&nbsp;SPONSORSHIP &nbsp;</a></span></td><td align="center" class="navHomeBotStatic">/</td><td align="center"><span class="navHomeBot"><a href="http://www.timexpo.com">&nbsp;TIMEXPO MUSEUM &nbsp;</a></span></td></tr></tbody></table></td></tr></tbody></table><table width="633" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td bgcolor="#999999"><img src="/timex_images/common/spacer.gif" width="633" height="1"></td></tr></tbody></table><img src="/timex_images/common/spacer.gif" width="633" height="3"><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td align="center"><table border="0" cellspacing="0" cellpadding="2"><tbody><tr><td align="center"><span class="textHomeFooter">Copyright ©1997-2005 Timex Corporation. All rights reserved.</span> <a href="http://www.timex.com/html/legal.html" class="textHomeFooter">Terms of Use</a> <a href="http://www.timex.com/html/help_privacy.html" class="textHomeFooter">Privacy Policy</a></td></tr></tbody></table></td></tr></tbody></table></td><td width="9"><img src="/timex_images/common/spacer.gif" width="9" height="9"></td></tr></tbody></table>
+<table width="800" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td width="142"><img src="/timex_images/common/spacer.gif" width="142" height="17"></td><td width="17"><img src="/timex_images/common/spacer.gif" width="17" height="17"></td><td valign="top"><img src="/timex_images/common/spacer.gif" width="633" height="5"><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td align="center"><table border="0" cellpadding="2" cellspacing="0"><tbody><tr><td align="center" class="navHomeBot"><a href="http://www.timex.com/html/our_company.html">&nbsp;COMPANY INFO/TOUR &nbsp;</a></td><td align="center" class="navHomeBotStatic">/</td><td align="center" class="navHomeBot"><a href="http://www.timex.com/corporatemarkets/">&nbsp;CORPORATE MARKETS&nbsp;</a></td><td align="center" class="navHomeBotStatic">/</td><td align="center" class="navHomeBot"><a href="http://pr.timex.com">&nbsp;MEDIA&nbsp;</a></td><td align="center" class="navHomeBotStatic">/</td><td align="center"><span class="navHomeBot"><a href="http://www.timex.com/sponsorship/">&nbsp;SPONSORSHIP &nbsp;</a></span></td><td align="center" class="navHomeBotStatic">/</td><td align="center"><span class="navHomeBot"><a href="http://www.timexpo.com">&nbsp;TIMEXPO MUSEUM &nbsp;</a></span></td></tr></tbody></table></td></tr></tbody></table><table width="633" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td bgcolor="#999999"><img src="/timex_images/common/spacer.gif" width="633" height="1"></td></tr></tbody></table><img src="/timex_images/common/spacer.gif" width="633" height="3"><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td align="center"><table border="0" cellspacing="0" cellpadding="2"><tbody><tr><td align="center"><span class="textHomeFooter">Copyright ©1997-2006 Timex Corporation. All rights reserved.</span> <a href="http://www.timex.com/html/legal.html" class="textHomeFooter">Terms of Use</a> <a href="http://www.timex.com/html/help_privacy.html" class="textHomeFooter">Privacy Policy</a></td></tr></tbody></table></td></tr></tbody></table></td><td width="9"><img src="/timex_images/common/spacer.gif" width="9" height="9"></td></tr></tbody></table>
 <!-- STOP footer table -->
 
 </center>
