ultimaterollercoaster.com (archived on 2007-12-27)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 12102,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.78,
  "homepage_snapshot_redirected_domain": "ultimaterollercoaster.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930202411id_/http://www.ultimaterollercoaster.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930202411id_/http%3A//ultimaterollercoaster.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ultimaterollercoaster.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071227090208id_/http%3A//www.ultimaterollercoaster.com/info/privacy.shtml",
  "policy_title": "Ultimate Rollercoaster | Privacy Policy",
  "policy_url": "ultimaterollercoaster.com/info/privacy.shtml",
  "sha1": "ffb27a05d6ce23859e2596fdf272ae78066d81ef",
  "simhash": 10151575241606619775,
  "simhash_updated": false,
  "site_hostname": "ultimaterollercoaster.com",
  "site_url": "http://ultimaterollercoaster.com",
  "smog": 15.99,
  "strict_updated": false,
  "timestamp": "20071227090208",
  "word_count": 1953,
  "year": 2007
}

--- a/u/ul/ult/ultimaterollercoaster.com.html
+++ b/u/ul/ult/ultimaterollercoaster.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ultimaterollercoaster.com privacy policy that was archived on 2006-11-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20061112011355id_/http%3A//www.ultimaterollercoaster.com/info/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ultimaterollercoaster.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227090208id_/http%3A//www.ultimaterollercoaster.com/info/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Ultimate Rollercoaster | Privacy Policy</title>
@@ -7,7 +7,7 @@
 	<meta name="description" content="Privacy statement for the Ultimate Rollercoaster web site detailing what information is obtained and how it is handled and stored.">
 	<meta name="keywords" content="privacy statement, privacy policy, privacy, ultimate rollercoaster, ultimaterollercoaster.com, ultimate rollercoaster.com, ultimate roller coaster">
 	<meta name="date-creation-yyyymmdd" content="20010610">
-	<!-- End Meta Tags -->
+	
 
 	
 	<script language="JavaScript">
@@ -38,7 +38,7 @@ function preloadImages() {
 
 </head>
 
-<body bgcolor="ffffff" text="000000" link="0000ff" alink="ff0000" vlink="663399" marginwidth="0" marginheight="5" topmargin="5" leftmargin="0" rightmargin="0" onload="preloadImages();">
+<body bgcolor="ffffff" text="000000" link="0000ff" alink="ff0000" vlink="663399" marginwidth="0" marginheight="0" topmargin="0" leftmargin="0" rightmargin="0" onload="preloadImages();">
 
 <map name="leftnav_info">
 <area shape="rect" coords="0,2,133,15" href="/info/about.shtml" alt="About Us">
@@ -55,13 +55,15 @@ function preloadImages() {
 	
 <table border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
-	<td width="305" align="center" valign="middle">
-	<a href="http://www.ultimaterollercoaster.com/" target="_top"><img src="/img/urc_logo.gif" width="246" height="34" border="0" alt="Ultimate Rollercoaster.com"></a></td>
+	<td width="300" align="center" valign="middle">
+	<a href="http://www.ultimaterollercoaster.com/" target="_top"><img src="/img/urc_logo.gif" width="246" height="34" border="0" vspace="10" alt="Ultimate Rollercoaster.com"></a></td>
 	
-	<td width="480" align="right" valign="middle">
+	<td width="485" align="right" valign="middle">
 	<font size="1" face="verdana, helvetica, arial"><a href="/info/">About Us</a> | <a href="/info/advertising.shtml">Advertising</a> | <a href="/info/faqs.shtml">FAQs</a> | <a href="/membership.shtml">Membership</a> | <a href="/info/sitemap.shtml">Site Map</a>&nbsp;<p>Members, <a href="/login.mpl">Sign-In</a>. Not a member? <a href="/register.mpl">Register Now</a>.&nbsp;</p></font></td>
-</tr><tr>
-	<td colspan="2" width="785" height="35" valign="bottom">
+</tr>
+
+<tr>
+	<td colspan="2" width="785" height="28" valign="bottom" bgcolor="000099">
 	<table border="0" cellpadding="0" cellspacing="0">
 	<tbody><tr>
 		<td width="80" height="28">
@@ -84,8 +86,8 @@ function preloadImages() {
 </tr>
 
 <tr>
-	<td colspan="2" width="785" height="32">
-	<table border="0" cellpadding="0" cellspacing="0" width="785">
+	<td colspan="2" width="785">
+	<table border="0" cellpadding="0" cellspacing="0">
 	<tbody><tr>
 		<td width="135" align="left" valign="top">
 		<!-- Lt Nav -->
@@ -101,9 +103,7 @@ function preloadImages() {
 <!-- Ad Include -->
 
 
-<!-- Thrillville -->
-<img src="/img/spacer.gif" width="300" height="2"><br>
-<font size="2" color="000099" face="verdana, helvetica, arial"></font><center><font size="2" color="000099" face="verdana, helvetica, arial"><b>Win an XBox!  Enter the Ultimate Rollercoaster <a href="/thrillville/">Thrillville Drawing</a>.</b></font></center>
+
 
 		<table border="0" cellpadding="0" cellspacing="0">
 		<tbody><tr>
@@ -261,7 +261,8 @@ function preloadImages() {
 			<a href="/info/privacy.shtml">Privacy Policy</a> |
 			<a href="/info/sitemap.shtml">Site Map</a> | 
 			<a href="/info/tos.shtml">Terms of Service</a> | 
-			<a href="/info/new.shtml">What's New</a> |</font></center><font size="1" face="verdana, helvetica, arial">
+			<a href="/info/new.shtml">What's New</a> |<br>
+
 			<!-- Footer -->
 			<table border="0" cellpadding="0" cellspacing="0" width="478">
 			<tbody><tr>
@@ -285,10 +286,10 @@ function preloadImages() {
 				<a href="/info/privacy.shtml">Privacy Policy</a> - 
 				<a href="/info/tos.shtml">Terms Of Service</a> 
 				<br>Ultimate Rollercoaster™ is a <a href="/info/copyright.shtml">trademark</a> of Eric Gieszl.
-				<br><a href="/info/copyright.shtml">Copyright</a> © 1996-2006 Ultimate Rollercoaster. All rights reserved.</small></font></p></td>
+				<br><a href="/info/copyright.shtml">Copyright</a> © 1996-2007 Ultimate Rollercoaster. All rights reserved.</small></font></p></td>
 			</tr>
 			</tbody></table><br>
-			</font></td>
+			</font></center></td>
 		</tr>
 		</tbody></table>
 		</td>
@@ -302,6 +303,14 @@ function preloadImages() {
 	</td>
 </tr>
 </tbody></table>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-1337048-1";
+urchinTracker();
+</script>
+
 
 
 </body></html>
