puzzlepirates.com (archived on 2007-12-27)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "games",
  "char_count": 4517,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.23,
  "homepage_snapshot_redirected_domain": "puzzlepirates.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930195804id_/http://www.puzzlepirates.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930195804id_/http%3A//puzzlepirates.com",
  "interval": "2007_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "puzzlepirates.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071227151711id_/http%3A//www.puzzlepirates.com/Privacy.xhtml",
  "policy_title": "Yohoho! Puzzle Pirates: Three Rings Privacy Policy",
  "policy_url": "puzzlepirates.com/Privacy.xhtml",
  "sha1": "a2ba8cad347b8828c02a7c2a5a4bbc07ea4c2b8a",
  "simhash": 4851649663469993879,
  "simhash_updated": true,
  "site_hostname": "puzzlepirates.com",
  "site_url": "http://puzzlepirates.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20071227151711",
  "word_count": 692,
  "year": 2007
}

--- a/p/pu/puz/puzzlepirates.com.html
+++ b/p/pu/puz/puzzlepirates.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the puzzlepirates.com privacy policy that was archived on 2007-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070627130627id_/http%3A//www.puzzlepirates.com/Privacy.xhtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the puzzlepirates.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227151711id_/http%3A//www.puzzlepirates.com/Privacy.xhtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Yohoho! Puzzle Pirates:
@@ -16,7 +16,7 @@ Three Rings Privacy Policy
 <script type="text/javascript">
 //<![CDATA[
 var page = "content";
-var affid = "";
+var affid = "2";
 if (parent && parent.location.href.indexOf("miniclip.com") != -1) {
   document.getElementById("nobranding").disabled = false;
 }
@@ -47,7 +47,7 @@ if (parent && parent.location.href.indexOf("miniclip.com") != -1) {
   
 <div id="content">
 <a id="Three_Rings_Privacy_Policy"></a><h1>Three Rings Privacy Policy</h1>
-<table id="toc" class="toc"><tbody><tr><td><div id="toctitle"><h2>Contents</h2></div>
+<table id="toc" class="toc" summary="Contents"><tbody><tr><td><div id="toctitle"><h2>Contents</h2></div>
 <ul>
 <li class="toclevel-1"><a href="#Three_Rings_Privacy_Policy"><span class="tocnumber">1</span> <span class="toctext">Three Rings Privacy Policy</span></a>
 <ul>
@@ -62,9 +62,8 @@ if (parent && parent.location.href.indexOf("miniclip.com") != -1) {
 </ul>
 </li>
 </ul>
-</td></tr></tbody></table>
-<p><script type="text/javascript"> if (window.showTocToggle) { var tocShowText = "show"; var tocHideText = "hide"; showTocToggle(); } </script>
-</p><p><br>
+</td></tr></tbody></table><script type="text/javascript"> if (window.showTocToggle) { var tocShowText = "show"; var tocHideText = "hide"; showTocToggle(); } </script>
+<p><br>
 This policy covers how Three Rings Design, Inc. ("Three Rings") treats personal information that Three Rings collects and receives, including information related to your past use of Three Rings products and services. Personal information is information about you that is personally identifiable such as your name, address, email address, or phone number, and that is not otherwise publicly available.
 </p>
 <a id="Information_Collection_and_Use"></a><h2>Information Collection and Use</h2>
